# bootcamp-aberto-aovivo

./: README.md  main.py  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: dag_airbyte.py  dag_airbyte_dbt.py  dag_dbt.py  main.py  pipeline.py
